[project]
name = "pile-supernote"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.9",
    "docopt>=0.6.2",
    "loguru>=0.7.2",
    "supernotelib",
]

[tool.uv.sources]
supernotelib = { git = "https://github.com/jya-dev/supernote-tool/", rev = "3ded7d9" }
