[project]
name = "pile-supernote"
version = "0.3.0"
description = "Supernote utilities to work with pile ecosystem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.9",
    "docopt>=0.6.2",
    "loguru>=0.7.2",
    "networkscan>=1.0.9",
    "supernotelib",
]

[tool.uv.sources]
supernotelib = { git = "https://github.com/jya-dev/supernote-tool/", rev = "3ded7d9" }
